2009-09-08 Arjan Bouter <abouter@sourcemage.org>
        * PROVIDES: provides GETTY

2009-09-07 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.16.1

2009-07-25 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated aes version to 2.16; updated aes patch to 20090725
	* BUILD: merged configure options

2009-07-17 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Disable STAGED_INSTALL (castfs) and TMPFS (Bug #15257)
	  The problem with the migration of libraries from e2fsprogs -> util-linux
	  stems from the library being removed and breaking mount, which castfs
	  and tmpfs use during installation.

2009-07-16 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.16

2009-06-26 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated aes version to 2.15.1; updated aes patch to 20090626

2009-06-10 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.15.1

2009-05-27 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated aes patch to 20090526

2009-05-12 Ladislav Hagara <hgr@vabo.cz>
	* BUILD: added --with-fsprobe=builtin
	  blkid is provided by util-linux instead of e2fsprogs from now
	* DETAILS: PATCHLEVEL=1

2009-05-11 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated aes version to 2.15; quoting paths

2009-05-06 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.15

2009-02-14 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated aes version to 2.14.2

2009-02-12 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated stable to 2.14.2

2008-10-15 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated aes version to 2.14.1; fixed desc
	* BUILD, [PRE_]SUB_DEPENDS: cleaned up
	* CONFIGURE, FINAL, [PRE_]INSTALL, PRE_BUILD: quoting paths

2008-09-10 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.14.1

2008-06-24 Vlad Glagolev <stealth@sourcemage.org>
	* DETALS: updated aes version to 2.14
	* PREPARE: corrected version-selection message

2008-06-21 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: added 2nd mirror for the sig of 3rd SOURCE
