@@ -2,4 +2,11 @@ make install DESTDIR="$INSTALL_ROOT" &&
 
 if [[ ! -e "$INSTALL_ROOT/etc/filesystems" ]]; then
   install -vm 644 "$SPELL_DIRECTORY/filesystems" "$INSTALL_ROOT/etc"
+fi &&
+
+mkdir -p $INSTALL_ROOT/etc/profile.d/ &&
+if install_config_file  $SCRIPT_DIRECTORY/profile.d/pager.sh \
+                        $INSTALL_ROOT/etc/profile.d/pager.sh; 
+then
+  chmod  0755  $INSTALL_ROOT/etc/profile.d/pager.sh
 fi
