@@ -1,0 +1,10 @@
+#!/bin/sh
+# First check if this variable is already set
+# then if not set, check it (maybe), then set it
+
+if  [ -z "$PAGER" ] ; then
+        PAGER="more"
+fi
+
+export PAGER
+
