@@ -1,3 +1,7 @@
+2009-09-13 Quentin Rameau <quinq@sourcemage.org>
+	* profile.d/editor.sh: added
+	* INSTALL: install editor.sh
+
 2009-09-08 Arjan Bouter <abouter@sourcemage.org>
         * PROVIDES: provides GETTY
 
@@ -340,3 +344,4 @@
 2002-03-26 Jeff Schmidt <jschmidt@fnal.gov>
 	* HISTORY: Added this file.
 	* DETAILS: updated version from ~n to ~o
+
